--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.demos.bnta</groupId>
 	<artifactId>Airline_api_lab</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>word_guesser</name>
+	<name>Airline_api_lab</name>
 	<description></description>
 	<properties>
 		<java.version>17</java.version>
