--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.3</version>
+		<version>2.7.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.demos.bnta</groupId>
 	<artifactId>Airline_api_lab</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Airline_api_lab</name>
-	<description></description>
+	<description>Airline flight booking API lab task</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
